kustomization/components/networkpolicy-allow-from-traefik/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-traefik-networkpolicy
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        # A `Pod` that names its port differently, or that takes more than one
        # port, needs a patch in its overlay.
        - port: web
          protocol: TCP
  podSelector:
    matchLabels:
      hogs.tswn.us/traefik-route: "true"
  policyTypes:
    - Ingress
